--- a/index.html
+++ b/index.html
@@ -126,42 +126,18 @@
 
 <body>
   <p>
-    <h3>Vader 3 Pro Gyro from DirectInput demo</h3>
+    <h3>Vader 3 Pro Gyro with DirectInput demo</h3>
     Connect Vader 3 Pro over dongle or wire (not Bluetooth!), switch into DirectInput mode (hold circle/screenshot button + A till blue light) and press connect.<br/><br/>
     Pressing start button on gamepad resets / zeroes the cube orientation. Accelerometer is not used in this demo, so: <br/>
     1) it's gonna accumulate drift<br/>
     2) you have to zero with gamepad horizontal / as if it's laying on table<br/>
   </p>
+  <p>
+    Description of message format could be found <a href="https://github.com/fishchev/vader-3-pro-gyro/blob/main/README.md">here</a>.
+  </p>
   <button onclick="connectDevice()">Connect</button>
   <p></p>
   <div id="cubeView"></div>
-  <p>
-    Gyro updates at exactly 100Hz, Accelerometer updates in ~50-53Hz range (unused in this demo)<br/>
-    HID input report format, bytes:<br/>
-    0-1 completely static, no idea<br/>
-    2 no idea as well, but first bit starts flipping at constant rate if aeromouse is enabled (if you configure OS to ignore aeromouse HID, then that could be used as latch-flag for screenshot button)<br/>
-    3 int8 gyro yaw 8 least significant bits [-512, 512]<br/>
-    4 first 4 bits: gyro pitch LSB, last 4 bits: gyro yaw MSB; combine with bytes 3 and 5 for 12-bit signed integer value<br/>
-    5 int8 gyro pitch 8 most significant bits [-512, 512]<br/>
-    6 button flags: 00, M4, M3, M2, M1, Z, C<br/>
-    7 button flags: 0000, HOME, 00, aeromouse/screenshot button<br/>
-    8 button flags: X, SELECT, B, A, LEFT, DOWN, RIGHT, UP <br/>
-    9 button flags: RS, LS, RT, LT, RB, LB, START, Y<br/>
-    10-11 int16le accelerometer, X-axis, 4096 is 1G<br/>
-    12-13 int16le accelerometer, Y-axis, -4800 (?) is about 1G in normal oriantation, 3800 triggers facing floor<br/>
-    14-15 int16le accelerometer, Z-axis, 4096 is 1G<br/>
-    16 int8 right stick X-axis<br/>
-    17 and 19 int16le, gyro yaw (yeah.. not continuous bytes for some reason) [-512, 512]<br/>
-    18 int8 right stick Y-axis<br/>
-    20 int8 left stick X-axis<br/>
-    21 int8 left stick Y-axis<br/>
-    22 uint8 left trigger analog<br/>
-    23 uint8 right trigger analog<br/>
-    24 last two bits are flags for triggers in digital mode, reported only if triggers are in discrete/short press mode<br/>
-    25 int16le gyro pitch [-512, 512]<br/>
-    27 completely static, no idea<br/>
-    28 int16le gyro roll [-32768, 32767]<br/>
-  </p>
 </body>
 
 </html>
