--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
 
 <body>
   <p>
-    <h3>Vader 3 Pro Gyro with DirectInput demo</h3>
-    Connect Vader 3 Pro over dongle or wire (not Bluetooth!), switch into DirectInput mode (hold circle/screenshot button + A till blue light) and press connect.<br/><br/>
-    Pressing start button on gamepad resets / zeroes the cube orientation. Accelerometer is not used in this demo, so: <br/>
-    1) it's gonna accumulate drift<br/>
-    2) you have to zero with gamepad horizontal / as if it's laying on table<br/>
+    <h3>Vader 3 Pro Gyro DirectInput Demo</h3>
+    Connect the Vader 3 Pro via dongle or wire (not Bluetooth!), switch to DirectInput mode (hold the circle/screenshot button + A until the blue light appears) and then press 'connect'.<br/><br/>
+    Pressing the 'start' button on the gamepad resets/zeroes the cube's orientation. Accelerometer is not used in this demo, so: <br/>
+    1) it will accumulate drift<br/>
+    2) you must zero it with the gamepad horizontal, as if it were lying on a table<br/>
   </p>
   <p>
     Description of message format could be found <a href="https://github.com/fishchev/vader-3-pro-gyro/blob/main/README.md">here</a>.
